--- a/WebContent/css/index.css
+++ b/WebContent/css/index.css
@@ -8,12 +8,17 @@
     src: url('../fonts/champagne.ttf') format('truetype');
 }
 
+html { 
+  background: url('../img/main-background.jpg') no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 body {
     margin: 0;
     height: 100%;
-    background-image: url('../img/main-background.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
 }
 
 body:before {
